src/test/resources/frontendReference/invalid/semanticErr/class/simple/classDoubleFunctions.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 16:4 -- Function 'f' was already defined in this scope.
Semantic Error at 19:4 -- Function 'f' was already defined in this scope.
Semantic Error at 22:4 -- Function 'f' was already defined in this scope.